--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="btn_accept">Aceptar</string>
     <string name="btn_cancel">Cancelar</string>
     <string name="error_blank_space">No se puede dejar en blanco</string>
+    <string name="title_delete_client">Eliminar cliente</string>
 </resources>
